objects/fpro__FieldPro__c.object
<CustomObject>
    <fields>
        <fullName>fpro__Relationship_Name__c</fullName>
        <description>If specified, indicates the value for one-to-many relationships. For example, in the object MyObject that had a relationship to YourObject, the relationship name might be YourObjects.</description>
        <inlineHelpText>If specified, indicates the value for one-to-many relationships. For example, in the object MyObject that had a relationship to YourObject, the relationship name might be YourObjects.</inlineHelpText>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Run_Service_MCD__c</fullName>
        <description>If TRUE, this field meets the requirement to calculate the metadata references.</description>
        <formula>AND
(
	fpro__Is_Custom_Field__c,
        fpro__Is_Deleted__c = false,
	OR
	(
		ISNULL(fpro__Last_Refresh_Date_MCD__c),
		DATEVALUE(fpro__Last_Refresh_Date_MCD__c) &lt; TODAY()
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If TRUE, this field meets the requirement to calculate the metadata references.</inlineHelpText>
        <label>Run Service (MCD)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Run_Service_Usage__c</fullName>
        <description>If TRUE, this field meets the requirement to calculate the populate percentage.</description>
        <formula>AND
(
	fpro__Is_Custom_Field__c,
	fpro__Is_Deleted__c = false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If TRUE, this field meets the requirement to calculate the populate percentage.</inlineHelpText>
        <label>Run Service (Usage)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Run_Status__c</fullName>
        <businessOwnerUser>0331i000000ht7hqaa@00d8l0000004csyuai</businessOwnerUser>
        <complianceGroup>PII;HIPAA;GDPR</complianceGroup>
        <description>Keep track of analysis results (used in VF page to check the status of results viewed by user)</description>
        <inlineHelpText>Keep track of analysis results (used in VF page to check the status of results viewed by user)</inlineHelpText>
        <label>Run Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Run Started</fullName>
                </value>
                <value>
                    <fullName>Results Viewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fpro__Salesforce_Id__c</fullName>
        <description>Unique salesforce id of this field.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique salesforce id of this field.</inlineHelpText>
        <label>Salesforce Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Salesforce_Record_Link__c</fullName>
        <description>Link to the salesforce custom field.</description>
        <formula>HYPERLINK(&quot;/&quot;+fpro__Salesforce_Id__c, &quot;Link&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the salesforce custom field.</inlineHelpText>
        <label>Salesforce Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Summarized_Field__c</fullName>
        <description>Represents the field on the detail row that is being summarized.</description>
        <inlineHelpText>Represents the field on the detail row that is being summarized.</inlineHelpText>
        <label>Summarized Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Summary_Foreign_Key__c</fullName>
        <description>Represents the master-detail field on the child that defines the relationship between the parent and the child.</description>
        <inlineHelpText>Represents the master-detail field on the child that defines the relationship between the parent and the child.</inlineHelpText>
        <label>Summary Foreign Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Summary_Operation__c</fullName>
        <description>Represents the sum operation to be performed.</description>
        <inlineHelpText>Represents the sum operation to be performed.</inlineHelpText>
        <label>Summary Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Total_Count__c</fullName>
        <description>Total count of records created in last X months.</description>
        <inlineHelpText>Total count of records created in last X months.</inlineHelpText>
        <label>Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__Track_History__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether history tracking is enabled for the field (true) or not (false).</description>
        <inlineHelpText>Indicates whether history tracking is enabled for the field (true) or not (false).</inlineHelpText>
        <label>Track History?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fpro__Unique_Id__c</fullName>
        <description>Field API name + Object API name.</description>
        <externalId>true</externalId>
        <inlineHelpText>Field API name + Object API name.</inlineHelpText>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>FieldPro</label>
    <listViews>
        <fullName>Nolan_Daigle_FieldPro</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>fpro__All</fullName>
        <columns>NAME</columns>
        <columns>fpro__Unique_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>fpro__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>fpro__Custom_Fields</fullName>
        <columns>NAME</columns>
        <columns>fpro__Salesforce_Record_Link__c</columns>
        <columns>fpro__Label__c</columns>
        <columns>fpro__API_Name__c</columns>
        <columns>fpro__Object_Label__c</columns>
        <columns>fpro__Object_API_Name__c</columns>
        <columns>fpro__Field_Type__c</columns>
        <columns>fpro__NamespacePrefix__c</columns>
        <columns>fpro__Field_Score__c</columns>
        <columns>fpro__Populate_Percentage__c</columns>
        <columns>fpro__References_Total_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fpro__Is_Custom_Field__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Custom Fields</label>
    </listViews>
    <listViews>
        <fullName>fpro__Standard_Fields</fullName>
        <columns>NAME</columns>
        <columns>fpro__Salesforce_Record_Link__c</columns>
        <columns>fpro__Label__c</columns>
        <columns>fpro__API_Name__c</columns>
        <columns>fpro__Object_Label__c</columns>
        <columns>fpro__Object_API_Name__c</columns>
        <columns>fpro__Field_Type__c</columns>
        <columns>fpro__NamespacePrefix__c</columns>
        <columns>fpro__Field_Score__c</columns>
        <columns>fpro__Populate_Percentage__c</columns>
        <columns>fpro__References_Total_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fpro__Is_Custom_Field__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Standard Fields</label>
    </listViews>
    <listViews>
        <fullName>fpro__Tech_Debt_Delete_Potential</fullName>
        <columns>NAME</columns>
        <columns>fpro__Salesforce_Record_Link__c</columns>
        <columns>fpro__Label__c</columns>
        <columns>fpro__API_Name__c</columns>
        <columns>fpro__Object_Label__c</columns>
        <columns>fpro__Object_API_Name__c</columns>
        <columns>fpro__Field_Type__c</columns>
        <columns>fpro__NamespacePrefix__c</columns>
        <columns>fpro__Field_Score__c</columns>
        <columns>fpro__Populate_Percentage__c</columns>
        <columns>fpro__References_Total_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fpro__Last_Refresh_Date_MCD__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>fpro__Last_Refresh_Date_Usage__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>fpro__Is_Custom_Field__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>fpro__Field_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>10</value>
        </filters>
        <label>Tech Debt: Delete Potential</label>
    </listViews>
    <listViews>
        <fullName>fpro__Tech_Debt_Fields_With_No_Description</fullName>
        <columns>NAME</columns>
        <columns>fpro__Salesforce_Record_Link__c</columns>
        <columns>fpro__Label__c</columns>
        <columns>fpro__API_Name__c</columns>
        <columns>fpro__Object_Label__c</columns>
        <columns>fpro__Object_API_Name__c</columns>
        <columns>fpro__Field_Type__c</columns>
        <columns>fpro__NamespacePrefix__c</columns>
        <columns>fpro__Field_Score__c</columns>
        <columns>fpro__Populate_Percentage__c</columns>
        <columns>fpro__References_Total_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fpro__Last_Refresh_Date_MCD__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>fpro__Is_Custom_Field__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>fpro__Description__c</field>
            <operation>equals</operation>
        </filters>
        <label>Tech Debt: Fields With No Description</label>
    </listViews>
    <listViews>
        <fullName>fpro__Tech_Debt_Fields_With_No_Profiles_PS</fullName>
        <columns>NAME</columns>
        <columns>fpro__Salesforce_Record_Link__c</columns>
        <columns>fpro__Label__c</columns>
        <columns>fpro__API_Name__c</columns>
        <columns>fpro__Object_Label__c</columns>
        <columns>fpro__Object_API_Name__c</columns>
        <columns>fpro__Field_Type__c</columns>
        <columns>fpro__NamespacePrefix__c</columns>
        <columns>fpro__Field_Score__c</columns>
        <columns>fpro__Populate_Percentage__c</columns>
        <columns>fpro__References_Total_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fpro__Last_Refresh_Date_MCD__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>fpro__Last_Refresh_Date_Usage__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>fpro__Is_Custom_Field__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>fpro__References_Profile_Visibility_Count__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>fpro__References_Permission_Sets_Count__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Tech Debt: Fields With No Profiles/PS</label>
    </listViews>
    <listViews>
        <fullName>fpro__Tech_Debt_Low_Metadata_References</fullName>
        <columns>NAME</columns>
        <columns>fpro__Salesforce_Record_Link__c</columns>
        <columns>fpro__Label__c</columns>
        <columns>fpro__API_Name__c</columns>
        <columns>fpro__Object_Label__c</columns>
        <columns>fpro__Object_API_Name__c</columns>
        <columns>fpro__Field_Type__c</columns>
        <columns>fpro__NamespacePrefix__c</columns>
        <columns>fpro__Field_Score__c</columns>
        <columns>fpro__Populate_Percentage__c</columns>
        <columns>fpro__References_Total_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fpro__Last_Refresh_Date_MCD__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>fpro__References_Total_Count__c</field>
            <operation>lessOrEqual</operation>
            <value>10</value>
        </filters>
        <filters>
            <field>fpro__Is_Custom_Field__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>fpro__Field_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </filters>
        <label>Tech Debt: Low Metadata References</label>
    </listViews>
    <listViews>
        <fullName>fpro__Tech_Debt_Low_Populate_Percentage</fullName>
        <columns>NAME</columns>
        <columns>fpro__Salesforce_Record_Link__c</columns>
        <columns>fpro__Label__c</columns>
        <columns>fpro__API_Name__c</columns>
        <columns>fpro__Object_Label__c</columns>
        <columns>fpro__Object_API_Name__c</columns>
        <columns>fpro__Field_Type__c</columns>
        <columns>fpro__NamespacePrefix__c</columns>
        <columns>fpro__Field_Score__c</columns>
        <columns>fpro__Populate_Percentage__c</columns>
        <columns>fpro__References_Total_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fpro__Last_Refresh_Date_MCD__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>fpro__Populate_Percentage__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </filters>
        <filters>
            <field>fpro__Is_Custom_Field__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>fpro__Field_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </filters>
        <label>Tech Debt: Low Populate Percentage</label>
    </listViews>
    <listViews>
        <fullName>fpro__Tech_Debt_Low_Score</fullName>
        <columns>NAME</columns>
        <columns>fpro__Salesforce_Record_Link__c</columns>
        <columns>fpro__Label__c</columns>
        <columns>fpro__API_Name__c</columns>
        <columns>fpro__Object_Label__c</columns>
        <columns>fpro__Object_API_Name__c</columns>
        <columns>fpro__Field_Type__c</columns>
        <columns>fpro__NamespacePrefix__c</columns>
        <columns>fpro__Field_Score__c</columns>
        <columns>fpro__Populate_Percentage__c</columns>
        <columns>fpro__References_Total_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fpro__Last_Refresh_Date_MCD__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>fpro__Last_Refresh_Date_Usage__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>fpro__Is_Custom_Field__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>fpro__Field_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>5</value>
        </filters>
        <label>Tech Debt: Low Score</label>
    </listViews>
    <nameField>
        <displayFormat>FieldPro-{000000}</displayFormat>
        <label>FieldPro Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FieldPro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>